--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "elmasa",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -27,5 +26,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
